hphp/test/slow/hack_mode/function_hint_with_params_trailing_variadic_param.php.expectf
Fatal error: syntax error, unexpected ',', expecting ')' in %s/test/slow/hack_mode/function_hint_with_params_trailing_variadic_param.php on line 8
